--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,28 +1,28 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'index' %}">
         <img src="{% static 'assets/flash_cards.svg' %}" alt="logo">
-        Flash Cardz</a>
+        Math Flash Cards</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Left Home</a>
+          <a class="nav-link" href="{% url 'addition' %}">Add</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Left Link</a>
+          <a class="nav-link" href="{% url 'subtraction' %}">Subtract</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'multiplication' %}">Multiply</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'division' %}">Divide</a>
         </li>
       </ul>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Right Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Right Link</a>
-        </li>
       </ul>
     </div>
   </div>
