--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     {% include "partials/navbar.html" %}
-    <div class="container mt-4">
+    <div class="container mt-4 h-100">
         {% block content %}
 
         {% endblock content %}
