--- a/templates/core/multiplication.html
+++ b/templates/core/multiplication.html
@@ -16,7 +16,7 @@
     <h1 class="text-center"><img src="../../static/cards/{{ num1 }}.png" alt="" /> X <img src="../../static/cards/{{ num2 }}.png" alt="" /></h1>
 </div>
 
-<form action="{% url 'multiplication' %}" method="POST" class="mt-4">
+<form action="{% url 'multiplication' %}" method="POST" class="my-4">
   {% csrf_token %}
   <div class="mb-3">
     <input type="text" name="answer" class="form-control" placeholder="Type your answer here">
