--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="footer mt-auto py-3 fixed-bottom">
+<footer class="footer mt-auto py-3 bg-light">
   <div class="container">
     <img src="{% static 'assets/flash_cards.svg' %}" alt="flash_cards" style="height: 100px;">
     <span class="footer-fs ps-4">Copyright &copy; 2023 | Excession Development. All rights reserved.</span>
